--- a/bonus/template/home.html
+++ b/bonus/template/home.html
@@ -20,7 +20,7 @@
                 <button class="build-in">Search</button>
             </form>
 
-            <form action="{% url 'searchVideo' %}" method="POST">
+            <!-- <form action="{% url 'searchVideo' %}" method="POST">
                 {% csrf_token %}
                 <input type="text" placeholder="Input keyword">
                 <button class="build-in">Search</button>
@@ -30,7 +30,7 @@
                 {% csrf_token %}
                 <input type="text" placeholder="Input keyword">
                 <button class="build-in">Search</button>
-            </form>
+            </form> -->
         </div>
 
         {% if error %}
