--- a/bonus/template/search.html
+++ b/bonus/template/search.html
@@ -6,10 +6,67 @@
         <title>Search video</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        {% load static %}
-        <link rel="stylesheet" href="{% static 'style.css' %}">
+        <style>
+            body {
+                width: 100%
+            }
+
+            h3, img {
+                margin: 0;
+                cursor: pointer;
+            }
+
+            #left {
+                width: 60%;
+                display: flex;
+                flex-direction: column;
+                top: 0;
+                left: 0;
+                right: 0;
+                float: left;
+            }
+
+            #right {
+                width: 40%;
+                position: fixed;
+                margin-left: 60%;
+            }
+
+            .list-video {
+                display: flex;
+                width: 100%;
+                justify-content: flex-start;
+                padding-top: 2vw;
+                padding-bottom: 2vw;
+            }
+
+            .list-video:hover {
+                background-color: rgba(190, 190, 190, 0.5)
+            }
+        </style>
     </head>
     <body>
-        <div>{{output}}</div>
+        <div id="left">
+            {% for item in output %}
+                <div class="list-video">
+                    <img width="320" height="180" src="{{item.snippet.thumbnails.medium.url}}" alt="Image">
+                    <div>
+                        <h3 onclick="changeVideo(this)" data-id="{{item.id.videoId}}">{{item.snippet.title}}</h3>
+                        <p>{{item.snippet.description}}</p>
+                    </div>
+                </div>
+            {% endfor %}
+        </div>
+        <div id="right">
+            <iframe id="frame" width="500" height="340" src="{{url}}" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
+
+        <script>
+            function changeVideo(video) {
+                var videoID = video.getAttribute("data-id");
+                var cur_video = document.getElementById("frame")
+                cur_video.src = "https://www.youtube.com/embed/" + videoID
+            }
+        </script>
     </body>
 </html>
