--- a/bonus/static/style.css
+++ b/bonus/static/style.css
@@ -53,6 +53,7 @@ div.build-ins > form > input {
     width: 15vh;
     text-align: center;
     cursor: pointer;
+    color: black
 }
 
 .build-in:hover {
