--- a/bonus/template/home.html
+++ b/bonus/template/home.html
@@ -14,23 +14,12 @@
         <h4>URL API : https://www.googleapis.com/youtube/v3</h4>
 
         <div class="build-ins">
+            <h3>Quick search video</h3>
             <form action="{% url 'searchVideo' %}" method="POST">
                 {% csrf_token %}
                 <input name="keyword" type="text" placeholder="Input keyword">
                 <button class="build-in">Search</button>
             </form>
-
-            <!-- <form action="{% url 'searchVideo' %}" method="POST">
-                {% csrf_token %}
-                <input type="text" placeholder="Input keyword">
-                <button class="build-in">Search</button>
-            </form>
-
-            <form action="{% url 'searchVideo' %}" method="POST">
-                {% csrf_token %}
-                <input type="text" placeholder="Input keyword">
-                <button class="build-in">Search</button>
-            </form> -->
         </div>
 
         {% if error %}
